# pathfinding-sandbox

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md
src/: app.cpp  main.cpp
src/ui/: main.cpp  ui.cpp  ui.hpp
tests/unit/: test_greeting.cpp
